crates/oxc_react_compiler/tests/snapshots/hoisting-nested-let-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-nested-let-declaration.js
---
import { c as _c } from "react/compiler-runtime";
function hoisting() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const qux = () => {
			let result;
			result = foo();
			return result;
		};
		let foo = () => bar + baz;
		let bar = 3;
		const baz = 2;
		t0 = qux();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: hoisting,
	params: [],
	isComponent: false
};
