crates/oxc_react_compiler/tests/snapshots/hoisting-reassigned-twice-let-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-reassigned-twice-let-declaration.js
---
import { c as _c } from "react/compiler-runtime";
import { CONST_NUMBER0, CONST_NUMBER1, Stringify } from "shared-runtime";
function useHook(t0) {
	"use memo";
	const $ = _c(2);
	const { cond } = t0;
	let t1;
	if ($[0] !== cond) {
		const getX = () => x;
		let x = CONST_NUMBER0;
		if (cond) {
			x = x + CONST_NUMBER1;
			x = Math.min(x, 100);
		}
		t1 = <Stringify getX={getX} shouldInvokeFns={true} />;
		$[0] = cond;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useHook,
	params: [{ cond: true }],
	sequentialRenders: [
		{ cond: true },
		{ cond: true },
		{ cond: false }
	]
};
