crates/oxc_react_compiler/tests/snapshots/hoisting-recursive-call-within-lambda.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-recursive-call-within-lambda.js
---
import { c as _c } from "react/compiler-runtime";
function Foo(t0) {
	const $ = _c(1);
	const outer = _temp;
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = outer(3);
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
function _temp(val) {
	const fact = (x) => {
		if (x <= 0) {
			return 1;
		}
		return x * fact(x - 1);
	};
	return fact(val);
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
