crates/oxc_react_compiler/tests/snapshots/hoisting-simple-function-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-simple-function-expression.js
---
import { c as _c } from "react/compiler-runtime";
function hoisting() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const foo = () => bar();
		const bar = _temp;
		t0 = foo();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	return 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: hoisting,
	params: [],
	isComponent: false
};
