crates/oxc_react_compiler/tests/snapshots/hoisting-simple-let-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hoisting-simple-let-declaration.js
---
import { c as _c } from "react/compiler-runtime";
function hoisting() {
	const $ = _c(1);
	let foo;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		foo = () => bar + baz;
		let bar = 3;
		let baz = 2;
		$[0] = foo;
	} else {
		foo = $[0];
	}
	return foo();
}
export const FIXTURE_ENTRYPOINT = {
	fn: hoisting,
	params: [],
	isComponent: false
};
